# VulkanSandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
data/models/: animbox.gltf
data/shaders/: shader.frag  shader.vert
src/: Animator.cpp  Animator.h  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Descriptors.h  FrameInfo.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Pipeline.cpp  Pipeline.h  Primitive.cpp  Primitive.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Skin.h  VulkanTexture.cpp  VulkanTexture.h  VulkanglTFModel.cpp  VulkanglTFModel.h  Window.cpp  Window.h  gltf.cpp  main.cpp
src/VulkanBackend/: Buffer.cpp  Buffer.h  Descriptors.cpp  Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h  VulkanBuffer.h
tools/: compile.sh
